--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-2 、龙席的愿景
-让全世界的生意人和消费者都爱上未来龙席的产品和服务。
-3 、龙席的使命
-成就客户在互联网领域的新发展、新成功
-4
-d66511cf-488f-4a33-a22d-0b6445441c6a  2
-d6d8109c-118d-44f5-ae2d-b2cb92d99b00 3
-f5d158fc-ceb9-4589-a77b-b427d4883d6e 1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<h1>danxinwu</h1>
+</body>
+</html>
