--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>danxinwu</h1>
 	<h2>wuxindan</h2>
 	<h3>haishi但不都是发生纠纷的角色等级划分及花费多少</h3>
+	<img src="./img/home_big.jpg" alt="">
 </body>
 </html>
